# zzz

./: .gitignore  CMakeLists.txt  README.md  conf_example.ini  cross.makefile  flake.nix  makefile-cross-build  meson.build
.github/workflows/: actions.yml  build.yml
cross/: aarch64-linux-gnu.txt  aarch64-linux-musl.toml  arm-linux-gnueabi.toml  arm-linux-gnueabihf.toml  arm-linux-musleabi.toml  arm-linux-musleabihf.toml  loongarch64-linux-gnu.toml  mipsel-linux-musleabi.toml  mipsel.txt  riscv64-linux-gnu.toml  riscv64-linux-musl.toml  x86-linux-gnu.toml  x86-linux-musl.toml  x86_64-linux-gnu.toml  x86_64-linux-musl.toml
include/: auth.h
include/crypto/: aes-md5.h  base64.h  const.h  crypto.h  md5.h
include/packet/: packet.h  send.h
include/utils/: config.h  device.h  log.h
src/: auth.c  main.c
src/auth/: builder.c  handler.c  packet.c  packet.h  parser.c  send.c
src/crypto/: aes-md5.c  aes.c  base64.c  const.c  crypto.c  crypto.h  dict.h  md5.c  test.c
src/packet/: packet.c  send.c
src/utils/: config.c  device.c  ini.c  log.c  log.h
